<resources>
    <string name="app_name">Movieku</string>
    <string name="movie">Film</string>
    <string name="tv">TV</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="change_langauge">change langauge</string>
    <string name="img_poster">img_poster</string>
    <string name="release_date">Release Date</string>
    <string name="first_air_date">First Air Date</string>
    <string name="img_backdrop">img_backdrop</string>
    <string name="title_popularity">Popularity</string>
    <string name="vote_count">Vote Count</string>
    <string name="vote_average">Vote Average</string>
    <string name="search">search</string>
    <string name="no_data">Sorry bro, there is no data</string>
    <string name="appwidget_text">Movie Favorite</string>
    <string name="reminder">reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="sub_msg_release_reminder">Reminder showing the movie that released today</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="sub_msg_daily_reminder">Reminder for return to app</string>
    <string name="hint_search_movie">Search Movie</string>
    <string name="hint_search_tv">Search TV</string>
    <string name="toolbar_reminder">Reminder</string>
    <string name="title_notif">MovieKu</string>
    <string name="sub_msg_notif">MovieKu is missing you :(</string>
    <string name="toast_alarm">Alarm inactive</string>
    <string name="toast_alarm_active">Alarm active</string>
</resources>
