<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/img_backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:contentDescription="@string/img_backdrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/cv_poster"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="10dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="4dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/img_poster_detail"
                        android:layout_width="100dp"
                        android:layout_height="150dp"
                        android:contentDescription="@string/img_poster" />

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="6dp"
                    app:cardElevation="3dp"
                    app:contentPadding="16dp"
                    app:layout_constraintBottom_toBottomOf="@id/cv_poster"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/cv_poster"
                    app:layout_constraintTop_toTopOf="@id/cv_poster">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:id="@+id/title_detail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ellipsize="end"
                            android:maxLines="1"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:text="Title Film" />

                        <TextView
                            android:id="@+id/title_popularity_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/title_popularity"
                            app:layout_constraintStart_toStartOf="@id/title_detail"
                            app:layout_constraintTop_toBottomOf="@id/title_detail" />

                        <TextView
                            android:id="@+id/popularity_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            app:layout_constraintBottom_toBottomOf="@id/title_popularity_detail"
                            app:layout_constraintStart_toEndOf="@id/title_popularity_detail"
                            app:layout_constraintTop_toTopOf="@id/title_popularity_detail"
                            tools:text="10000" />

                        <TextView
                            android:id="@+id/title_vote_count_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_count"
                            app:layout_constraintStart_toStartOf="@id/title_popularity_detail"
                            app:layout_constraintTop_toBottomOf="@id/title_popularity_detail" />

                        <TextView
                            android:id="@+id/vote_count_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/black"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@id/popularity_detail"
                            app:layout_constraintTop_toBottomOf="@id/popularity_detail"
                            tools:text="100" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/vote_average"
                            app:layout_constraintStart_toStartOf="@id/title_vote_count_detail"
                            app:layout_constraintTop_toBottomOf="@id/title_vote_count_detail" />

                        <TextView
                            android:id="@+id/vote_avg_detail"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/colorAccent"
                            android:textStyle="bold"
                            app:layout_constraintStart_toStartOf="@id/vote_count_detail"
                            app:layout_constraintTop_toBottomOf="@id/vote_count_detail"
                            tools:text="8.5" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/overview_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cv_poster" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_fav"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="end|bottom"
        app:srcCompat="@drawable/ic_add_to_favorites" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>